# Rain

./: .gitignore  README.md  build-exe.ps1  build-linux.sh  build-windows.bat
.github/workflows/: ci.yml  release.yml
backend/: .env.example  Cargo.toml
backend/src/: blob_store.rs  config.rs  db.rs  embedded_frontend.rs  error.rs  file_classification.rs  http_access_log.rs  ingest.rs  lib.rs  log_expression.rs  main.rs  routes.rs
backend/src/ingest/: limits.rs  quota.rs
backend/src/ingest/archive/: budget.rs  gzip.rs  mod.rs  path_policy.rs  tar_gz.rs  zip.rs
backend/src/ingest/indexing/: event_parser.rs  line_reader.rs  mod.rs
backend/src/models/: files.rs  issues.rs  logs.rs  mod.rs
backend/src/repositories/: files.rs
backend/src/routes/: files.rs  health.rs  helpers.rs  issues.rs  logs.rs  mod.rs  temp_results.rs  uploads.rs
backend/src/services/: file_deletion.rs  file_reader.rs  mod.rs  temp_results.rs
backend/src/upload/: filename.rs  finalizer.rs  job.rs  lifecycle.rs  mod.rs  multipart.rs
backend/tests/: smoke.rs
doc/: DB.md
docs/superpowers/plans/: 2026-07-13-log-viewer-tabs.md  2026-07-13-shareable-temporary-log-results.md  2026-07-15-configurable-limits.md  (+13 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  version.ts
frontend/tests/: binary-file-info.mjs  file-tree-node.mjs  filename-search.mjs  search-hit-source.mjs  search-tokens.mjs  syntax-highlighting.mjs  upload-failure.mjs
scripts/: build.sh  deploy.sh
(+53 files in other folders)
